    middle. Closes #3245.
 * Added an Extras render funcion to render the related URL field. Closes
    #3246.

2008-03-27 tdb
 * Added importid and source_id fields to eprint for the import set and 
    source object identifier respectively
 * Added import dataset for storing imported collections (alpha)
 * Moved database schema into a separate Admin screen "Database Schema"
 * Added has_dataset and has_counter methods to Database
 * Fixed has_table and has_column for MySQL
 * Added generic upgrading of datasets/fields/counters to epadmin
 * Allow values to be used in views containing ':' or '.', fixing #3316

2008-03-27 cjg
 * Commented-out scroll-to code as it appears to be breaking in my 
    firefox (and scrolling to the top of the page) and that's worst than
    doing nothing.

2008-03-27 cjg
 * Added new document formats: RTF plus several for audio and archive 
    formats (zip, tgz etc.) Closes #3106, #2919
 * Added revised icons for all formats.
 * Added new content field to documents core fields. Closes #3281
 * Added new relation field to documents core fields.
 * Added new relation field to eprint core fields.
 * Added new contributors field to eprint config fields.
 * Modified workflow to have place holders for new fields, and to actually
    include document.content.
 * Added named sets to support these new fields.
 * Tweaked config so that thesis is now only defaulted to unpub, not forced.
    Closes #3234

2008-03-28 tdb
 * Added "Import full text" option to Import screen (if enable_web_imports is
    true)

2008-03-28 cjg
 * Added update_database_structure option to epadmin (but not shown in the
    --help yet.)

2008-03-28 cjg
 * Added proper audio icon. Closing #3317.

2008-03-30 cjg
 * Renamed update_database_structure to update_database_structure

2008-03-31 cjg
 * Fixed bug in rendering input for MetaField::Fields

2008-03-31
 * Stopped update_database_structure checking sub-fields, fixing #3323
